--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -148,9 +148,26 @@ code {
 .MuiGrid-root.MuiGrid-container.MuiGrid-item.sendMessageContainer {
   padding: 0px 24px;
   margin-top: 1rem;
-  background: #f5f8fe;
   border-radius: 40px;
 }
+.MuiGrid-root.MuiGrid-container.MuiGrid-item.sendMessageContainer, .MuiButton-root.attachmentButton 
+  {
+  background: #f5f8fe;
+}
+
+.MuiButton-root.attachmentButton {
+  border-radius: 50%;
+  margin-left: 8px;
+  padding: 0.5rem;
+  height: 3.5rem;
+  width: 3.5rem;
+  min-width: 0;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  position: relative;
+}
+
 p#USERCHATINPUT-helper-text {
   padding-bottom: 12px;
 }
