--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -184,3 +184,53 @@ p#USERCHATINPUT-helper-text {
   max-height: 65vh;
   overflow-y: auto; /* Changed from "overflow: auto" to "overflow-y: auto" */
 }
+
+/* for bot file check reply */
+
+/* styles.css */
+
+@keyframes backgroundTransition {
+  0% {
+    background-color: #E1EBFF; /* Initial blue color */
+  }
+  100% {
+    background-color: green; /* Final green color */
+  }
+}
+
+@keyframes loadingSpinner {
+  0% {
+    transform: rotate(0deg);
+  }
+  100% {
+    transform: rotate(360deg);
+  }
+}
+
+.loading {
+  display: inline-block;
+  width: 24px;
+  height: 24px;
+  border: 4px solid rgba(0, 0, 0, 0.1);
+  border-radius: 50%;
+  border-top-color: #75787B;
+  animation: loadingSpinner 1s linear infinite;
+}
+
+.file-status-box {
+  border: 1px solid #75787B;
+  border-radius: 1rem;
+  padding: 4px 12px;
+  margin-top: 4px;
+  font-style: italic;
+  display: flex;
+  align-items: center;
+  gap: 8px;
+}
+
+.file-status-box.success {
+  animation: backgroundTransition 1s forwards;
+  background-color: green;
+  color: white;
+}
+
