--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -1,16 +1,19 @@
+/* Import the Lato font */
+@import url('https://fonts.googleapis.com/css2?family=Lato:wght@400;700&display=swap');
+
 html,
 body {
   height: 100%;
 }
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen", "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue", sans-serif;
+  font-family: 'Lato', -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen", "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue", sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
 
 code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New", monospace;
+  font-family: 'Lato', source-code-pro, Menlo, Monaco, Consolas, "Courier New", monospace;
 }
 .appHideScroll {
   overflow: hidden !important;
@@ -94,22 +97,27 @@ code {
 /* Text Transform Classes */
 
 .appTextBold {
+  font-family: 'Lato';
   font-weight: bold; /* Removed !important for better specificity */
 }
 
 .appTextWeight400 {
+  font-family: 'Lato';
   font-weight: 400;
 }
 
 .appTextWeight500 {
+  font-family: 'Lato';
   font-weight: 500;
 }
 
 .appTextWeight600 {
+  font-family: 'Lato';
   font-weight: 600;
 }
 
 .appTextWeight700 {
+  font-family: 'Lato';
   font-weight: 700;
 }
 
@@ -149,6 +157,7 @@ code {
   padding: 0px 24px;
   margin-top: 1rem;
   border-radius: 40px;
+
 }
 .MuiGrid-root.MuiGrid-container.MuiGrid-item.sendMessageContainer, .MuiButton-root.attachmentButton 
   {
@@ -181,7 +190,7 @@ p#USERCHATINPUT-helper-text {
   font-weight: 600;
 }
 .chatScrollContainer {
-  max-height: 65vh;
+  max-height: calc(100vh - 5rem);
   overflow-y: auto; /* Changed from "overflow: auto" to "overflow-y: auto" */
 }
 
@@ -246,5 +255,3 @@ p#USERCHATINPUT-helper-text {
   background-color: red;
   color: white;
 }
-
-
