--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -147,7 +147,7 @@ code {
 }
 
 .MuiGrid-root.MuiGrid-item.botMessage {
-  margin-left: 0.5rem;
+  margin: 1rem 0 0 0.5rem;
   text-align: start;
   padding: 10px !important;
   max-width: 75%;
